# Dicion-rio-de-not-cias

./: .gitignore  CMakeLists.txt  README.md  build.sh  buildDebug.sh  buildRunExperiments.sh  main.cpp
CLI/: CMakeLists.txt  main.cpp
Dictionary/: CMakeLists.txt  DictNode.cpp  DictNode.hpp  Dictionary.cpp  Dictionary.hpp  Document.hpp  DocumentCounterAVL.cpp  DocumentCounterAVL.hpp  DocumentHeap.cpp  DocumentHeap.hpp
Dictionary/HashDictionary/: CMakeLists.txt  HashDictionary.cpp  HashDictionary.hpp
Dictionary/TRIEDictionary/: CMakeLists.txt  TRIEDictionary.cpp  TRIEDictionary.hpp
Experiments/: CMakeLists.txt  experiment.cpp
Plots/: plot_in_time.p  plot_mem.p  plot_queries1_time.p  plot_queries2_time.p
Plots/Hash/: mem_hash.plt  time_hash.plt  time_queries_1_hash.plt  time_queries_2_hash.plt
Plots/TRIE/: mem_trie.plt  time_queries_1_trie.plt  time_queries_2_trie.plt  time_trie.plt
Utils/: CMakeLists.txt  utils.cpp  utils.hpp
data/: teste.json
